# TBSLA

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/cmake-modules/: FindPETSc.cmake  FindPackageMultipass.cmake  ResolveCompilerPaths.cmake
src/cpp/: CMakeLists.txt
src/cpp/apps/: CMakeLists.txt  tbsla_binCOO_to_binCSR.cpp  tbsla_check_yml_results.cpp  tbsla_gen_matrix.cpp  tbsla_mm_to_binCOO.cpp  tbsla_page_rank.cpp  tbsla_perf.cpp  tbsla_personalized_page_rank.cpp  tbsla_print_binCOO_as_Dense.cpp  tbsla_spmv.cpp  tbsla_storage_conversion.cpp  test_impl_csr.cpp
src/cpp/include/tbsla/cpp/: Matrix.hpp  MatrixCOO.hpp  MatrixCSR.hpp  MatrixDENSE.hpp  MatrixELL.hpp  MatrixSCOO.hpp  reduction.hpp
src/cpp/include/tbsla/cpp/utils/: InputParser.hpp  array.hpp  cdiag.hpp  cpuset_to_cstr.hpp  csr.hpp  mm.hpp  range.hpp  split.hpp  values_generation.hpp  vector.hpp
src/cpp/interface/c/include/tbsla/cpp/: MatrixCOO.h  MatrixCSR.h  MatrixDENSE.h  MatrixELL.h  MatrixSCOO.h  Vector.h
src/cpp/interface/c/include/tbsla/cpp/utils/: range.h
src/cpp/interface/c/matrix/: CMakeLists.txt  MatrixCOO.cpp  MatrixCSR.cpp  MatrixDENSE.cpp  MatrixELL.cpp  MatrixSCOO.cpp  Vector.cpp
src/cpp/matrix/: CMakeLists.txt  Matrix.cpp  MatrixCOO.cpp  MatrixCOO_mpi.cpp  MatrixCSR.cpp  MatrixCSR_mpi.cpp  MatrixDENSE.cpp  MatrixELL.cpp  MatrixSCOO.cpp
src/cpp/tests/: CMakeLists.txt  coo.cpp  coo_to_csr.cpp  csr.cpp  input_parser.cpp  test_AAxpAx_cdiag.cpp  test_Ax_cdiag.cpp  test_a_axpx__cdiag.cpp  test_page_rank.cpp  test_personalized_page_rank.cpp  test_spmv_cdiag.cpp  test_spmv_cqmat.cpp  test_spmv_cqmat_stochastic.cpp
src/cpp/utils/: CMakeLists.txt  InputParser.cpp  array.cpp  cdiag.cpp  cpuset_to_cstr.cpp  csr.cpp  mm.cpp  range.cpp  split.cpp  values_generation.cpp  vector.cpp
src/hpx/: CMakeLists.txt
src/hpx/apps/: CMakeLists.txt  tbsla_perf_hpx.cpp  tbsla_spmv_hpx.cpp
src/hpx/include/tbsla/hpx/: Matrix.hpp  MatrixCOO.hpp  MatrixCSR.hpp  MatrixDENSE.hpp  MatrixELL.hpp  MatrixSCOO.hpp  Vector.hpp
src/hpx/libtbsla_hpx/: CMakeLists.txt  MatrixCOO.cpp  MatrixCSR.cpp  MatrixDENSE.cpp  MatrixELL.cpp  MatrixSCOO.cpp  Vector.cpp
src/hpx/tests/: CMakeLists.txt  test_a_axpx__cdiag.cpp  test_spmv_cdiag.cpp  test_spmv_cqmat.cpp
src/includes/tbsla/: Configs.h.in
src/mpi/: CMakeLists.txt
src/mpi/apps/: CMakeLists.txt  tbsla_page_rank_mpi.cpp  tbsla_perf_cg_mpi.cpp  tbsla_perf_mpi.cpp  tbsla_perf_page_rank.cpp  tbsla_perf_page_rank_mpi.cpp  tbsla_perf_personalized_page_rank_mpi.cpp  tbsla_personalized_page_rank_mpi.cpp  tbsla_spmv_mpi.cpp
src/mpi/include/tbsla/mpi/: Matrix.hpp  MatrixCOO.hpp  MatrixCSR.hpp  MatrixDENSE.hpp  MatrixELL.hpp  MatrixSCOO.hpp
src/mpi/interface/c/include/tbsla/mpi/: MatrixCOO.h  MatrixCSR.h  MatrixDENSE.h  MatrixELL.h  MatrixSCOO.h  vector_comm.h
src/mpi/interface/c/matrix/: CMakeLists.txt  MatrixCOO.cpp  MatrixCSR.cpp  MatrixDENSE.cpp  MatrixELL.cpp  MatrixSCOO.cpp  vector_comm.cpp
src/mpi/matrix/: CG.cpp  CMakeLists.txt  Matrix.cpp  MatrixCOO.cpp  MatrixCSR.cpp  MatrixDENSE.cpp  MatrixELL.cpp  MatrixSCOO.cpp
src/mpi/tests/: CMakeLists.txt  test_AAxpAx_cdiag.cpp  test_Ax_cdiag.cpp  test_a_axpx__cdiag.cpp  test_bin_mpiio.cpp  test_page_rank.cpp  test_personalized_page_rank.cpp  test_spmv_cdiag.cpp  test_spmv_cqmat.cpp  test_spmv_cqmat_stochastic.cpp  test_stochastic.cpp
src/parsec/: CMakeLists.txt
src/parsec/include/tbsla/parsec/: Matrix.h  Vector.h
src/parsec/libtbsla_parsec/: CMakeLists.txt  Matrix.c  Vector.c  spmv.jdf
src/parsec/tests/: CMakeLists.txt  test_spmv_cdiag.c
src/petsc/: CMakeLists.txt
src/petsc/apps/: CMakeLists.txt  tbsla_perf_petsc.cpp
src/petsc/include/tbsla/petsc/: Matrix.hpp
src/petsc/libtbsla_petsc/: CMakeLists.txt  Matrix.cpp
src/petsc/tests/: CMakeLists.txt  test_a_axpx__cdiag.cpp  test_spmv_cdiag.cpp  test_spmv_cqmat.cpp
src/yml/DefaultExecutionCatalog/generators/XMP/include/: SparseMatrix.xmptype.h  Vector.xmptype.h
src/yml/abst/: gather.query  gen_Sparse_CQMAT.query  gen_Vector.query  spmv.query  sum.query  sum2.query
src/yml/app/: a_axpx.query  spmv.query
src/yml/compilation/: compile_apps.py  compile_components.py
src/yml/impl/: gather.query  gen_Sparse_CQMAT.query  gen_Vector.query  spmv.query  sum.query  sum2.query
tools/: _setup_yml.sh  gen_submit_cmd.py  gen_submit_mm_cmd.py  gen_submit_pagerank_cmd.py  gen_yml_hostfile.py  reorder_machinefile.py  run.py  run_yml.py  stats.py  submit.py  submit_pagerank.py  submit_test.py
tools/bash/: README.md  _gen_all.sh  build_fugaku_computenode_fujitsumpi.sh
tools/common/: argparse.py  exec_cmd.py  parse_yml_log.py  submission.py
tools/containers/: tbsla.def  tbsla_env.def  tbsla_hpctoolkit.def  yml_build.def  yml_env.def
tools/jobscripts_fugaku/: README.md
tools/machine/: FX700.py  Fugaku.py  Pangea2.py  Poincare.py  Ruche.py  _default.py
