add_executable(tbsla_perf_mpi tbsla_perf_mpi.cpp)
target_link_libraries(tbsla_perf_mpi PRIVATE tbsla_mpi)
target_link_libraries(tbsla_perf_mpi PUBLIC MPI::MPI_CXX)
target_link_libraries(tbsla_perf_mpi PUBLIC tbsla)
install(TARGETS tbsla_perf_mpi DESTINATION bin)

add_executable(tbsla_perf_page_rank_mpi tbsla_perf_page_rank_mpi.cpp)
target_link_libraries(tbsla_perf_page_rank_mpi PRIVATE tbsla_mpi)
target_link_libraries(tbsla_perf_page_rank_mpi PUBLIC MPI::MPI_CXX)
target_link_libraries(tbsla_perf_page_rank_mpi PUBLIC tbsla)
install(TARGETS tbsla_perf_page_rank_mpi DESTINATION bin)

add_executable(tbsla_perf_cg_mpi tbsla_perf_cg_mpi.cpp)
target_link_libraries(tbsla_perf_cg_mpi PRIVATE tbsla_mpi)
target_link_libraries(tbsla_perf_cg_mpi PUBLIC MPI::MPI_CXX)
target_link_libraries(tbsla_perf_cg_mpi PUBLIC tbsla)
install(TARGETS tbsla_perf_cg_mpi DESTINATION bin)

if(TBSLA_ENABLE_OMP)
  add_executable(tbsla_perf_mpi_omp tbsla_perf_mpi.cpp)
  target_link_libraries(tbsla_perf_mpi_omp PRIVATE tbsla_mpi_omp)
  target_link_libraries(tbsla_perf_mpi_omp PUBLIC MPI::MPI_CXX)
  target_link_libraries(tbsla_perf_mpi_omp PUBLIC tbsla_omp)
  install(TARGETS tbsla_perf_mpi_omp DESTINATION bin)

  add_executable(tbsla_perf_page_rank_mpi_omp tbsla_perf_page_rank_mpi.cpp)
  target_link_libraries(tbsla_perf_page_rank_mpi_omp PRIVATE tbsla_mpi_omp)
  target_link_libraries(tbsla_perf_page_rank_mpi_omp PUBLIC MPI::MPI_CXX)
  target_link_libraries(tbsla_perf_page_rank_mpi_omp PUBLIC tbsla_omp)
  install(TARGETS tbsla_perf_page_rank_mpi_omp DESTINATION bin)

  add_executable(tbsla_perf_cg_mpi_omp tbsla_perf_cg_mpi.cpp)
  target_link_libraries(tbsla_perf_cg_mpi_omp PRIVATE tbsla_mpi_omp)
  target_link_libraries(tbsla_perf_cg_mpi_omp PUBLIC MPI::MPI_CXX)
  target_link_libraries(tbsla_perf_cg_mpi_omp PUBLIC tbsla_omp)
  install(TARGETS tbsla_perf_cg_mpi_omp DESTINATION bin)
endif()

