function(add_tbsla_mpi_executable SRC)
  add_executable(mpi_${SRC} ${SRC}.cpp)
  target_link_libraries(mpi_${SRC} PRIVATE tbsla_mpi)
  # modern cmake (3.9+)
  # https://cliutils.gitlab.io/modern-cmake/chapters/packages/MPI.html
  target_link_libraries(mpi_${SRC} PUBLIC MPI::MPI_CXX)
  target_link_libraries(mpi_${SRC} PUBLIC tbsla)
  add_test ("mpi_${SRC}_test" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} mpi_${SRC} ${MPIEXEC_POSTFLAGS})
  add_test ("mpi_${SRC}_test1" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} mpi_${SRC} ${MPIEXEC_POSTFLAGS})
  add_test ("mpi_${SRC}_test2" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} mpi_${SRC} ${MPIEXEC_POSTFLAGS})
  if(3 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}_test3" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} "mpi_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(4 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}_test4" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 4 ${MPIEXEC_PREFLAGS} "mpi_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(5 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}_test5" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 5 ${MPIEXEC_PREFLAGS} "mpi_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
endfunction()


add_tbsla_mpi_executable(test_spmv_cdiag)
add_tbsla_mpi_executable(test_spmv_cqmat)
add_tbsla_mpi_executable(test_a_axpx__cdiag)

