function(add_tbsla_mpi_executable SRC SUFFIX LARGETESTS)
  add_executable(mpi_${SRC}${SUFFIX} ${SRC}.cpp)
  target_link_libraries(mpi_${SRC}${SUFFIX} PRIVATE tbsla_mpi${SUFFIX})
  # modern cmake (3.9+)
  # https://cliutils.gitlab.io/modern-cmake/chapters/packages/MPI.html
  target_link_libraries(mpi_${SRC}${SUFFIX} PUBLIC MPI::MPI_CXX)
  target_link_libraries(mpi_${SRC}${SUFFIX} PUBLIC tbsla${SUFFIX})
  if(LARGETESTS)
    add_test ("mpi_${SRC}${SUFFIX}_test" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} ./mpi_${SRC}${SUFFIX} ${MPIEXEC_POSTFLAGS})
  endif()
  add_test ("mpi_${SRC}${SUFFIX}_test1" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} ./mpi_${SRC}${SUFFIX} ${MPIEXEC_POSTFLAGS})
  if(2 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}${SUFFIX}_test2" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} ./mpi_${SRC}${SUFFIX} ${MPIEXEC_POSTFLAGS})
  endif()
  if(3 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}${SUFFIX}_test3" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} "./mpi_${SRC}${SUFFIX}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(4 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}${SUFFIX}_test4" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 4 ${MPIEXEC_PREFLAGS} "./mpi_${SRC}${SUFFIX}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(5 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("mpi_${SRC}${SUFFIX}_test5" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 5 ${MPIEXEC_PREFLAGS} "./mpi_${SRC}${SUFFIX}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(6 LESS ${MPIEXEC_MAX_NUMPROCS} AND LARGETESTS)
      add_test ("mpi_${SRC}${SUFFIX}_test6" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 6 ${MPIEXEC_PREFLAGS} "./mpi_${SRC}${SUFFIX}" ${MPIEXEC_POSTFLAGS})
  endif()
endfunction()


if(TBSLA_MPI_TESTS)
  add_tbsla_mpi_executable(test_spmv_cdiag "" ON)
  add_tbsla_mpi_executable(test_spmv_cqmat "" ON)
  add_tbsla_mpi_executable(test_a_axpx__cdiag "" ON)
  add_tbsla_mpi_executable(test_Ax_cdiag "" ON)
  add_tbsla_mpi_executable(test_AAxpAx_cdiag "" ON)
  if(TBSLA_ENABLE_OMP)
    add_tbsla_mpi_executable(test_spmv_cdiag "_omp" OFF)
    add_tbsla_mpi_executable(test_spmv_cqmat "_omp" OFF)
    add_tbsla_mpi_executable(test_a_axpx__cdiag "_omp" OFF)
    add_tbsla_mpi_executable(test_Ax_cdiag "_omp" OFF)
    add_tbsla_mpi_executable(test_AAxpAx_cdiag "_omp" OFF)
  endif()
  if(TBSLA_MPI_TESTS_IO)
    add_tbsla_mpi_executable(test_bin_mpiio "" ON)
  endif()
endif()
