function(add_tbsla_parsec_executable SRC)
  add_executable(parsec_${SRC} ${SRC}.c)
  #target_link_libraries(parsec_${SRC} PRIVATE PaRSEC::parsec)
  target_link_libraries(parsec_${SRC} PRIVATE tbsla_parsec)
  add_test ("parsec_${SRC}_test" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} parsec_${SRC} ${MPIEXEC_POSTFLAGS})
  add_test ("parsec_${SRC}_test1" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} parsec_${SRC} ${MPIEXEC_POSTFLAGS})
  add_test ("parsec_${SRC}_test2" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} parsec_${SRC} ${MPIEXEC_POSTFLAGS})
  if(3 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("parsec_${SRC}_test3" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} "parsec_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(5 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("parsec_${SRC}_test5" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 5 ${MPIEXEC_PREFLAGS} "parsec_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
endfunction()

#add_tbsla_parsec_executable(lu)
#target_ptg_sources(lu PRIVATE lu.jdf)

add_tbsla_parsec_executable(test_spmv_cdiag)
#target_sources(test_spmv_cdiag PRIVATE test_spmv_cdiag.cpp)
