function(add_tbsla_petsc_executable SRC)
  add_executable(petsc_${SRC} ${SRC}.cpp)
  target_link_libraries(petsc_${SRC} PUBLIC tbsla_petsc)
  add_test ("petsc_${SRC}_test" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} petsc_${SRC} ${MPIEXEC_POSTFLAGS})
  add_test ("petsc_${SRC}_test1" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 1 ${MPIEXEC_PREFLAGS} petsc_${SRC} ${MPIEXEC_POSTFLAGS})
  add_test ("petsc_${SRC}_test2" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS} petsc_${SRC} ${MPIEXEC_POSTFLAGS})
  if(3 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("petsc_${SRC}_test3" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 3 ${MPIEXEC_PREFLAGS} "petsc_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
  if(5 LESS ${MPIEXEC_MAX_NUMPROCS})
      add_test ("petsc_${SRC}_test5" ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 5 ${MPIEXEC_PREFLAGS} "petsc_${SRC}" ${MPIEXEC_POSTFLAGS})
  endif()
endfunction()


add_tbsla_petsc_executable(test_spmv_cdiag)
add_tbsla_petsc_executable(test_a_axpx__cdiag)
if(TBSLA_ENABLE_MPI)
  add_tbsla_petsc_executable(test_spmv_cqmat)
  target_link_libraries(petsc_test_spmv_cqmat PUBLIC tbsla_mpi)
endif()
